create css styles

--- a/match-three/index.html
+++ b/match-three/index.html
@@ -4,11 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>Match three</title>
 </head>
 
 <body>
+  <main>
+    <div class="scores"></div>
+    <div class="wrapper">
+      <div class="board">
 
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
