feat: add init script for game

--- a/match-three/index.html
+++ b/match-three/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
+  <script type="module" src="./script.js"></script>
   <title>Match three</title>
 </head>
 
 <body>
   <main>
-    <div class="scores"></div>
+    <div class="scores">0</div>
     <div class="wrapper">
       <div class="board">
 
