feat: tile element

--- a/match-three/index.html
+++ b/match-three/index.html
@@ -12,11 +12,7 @@
 <body>
   <main>
     <div class="scores">0</div>
-    <div class="wrapper">
-      <div class="board">
-
-      </div>
-    </div>
+    <div class="wrapper"></div>
   </main>
 </body>
 
