--- a/match-three/index.html
+++ b/match-three/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <main>
-    <div class="scores">0</div>
+    <div class="score">0</div>
     <div class="wrapper"></div>
   </main>
 </body>
