--- a/2048-game/index.html
+++ b/2048-game/index.html
@@ -10,28 +10,7 @@
 </head>
 
 <body>
-  <main>
-    <div id="game-board">
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-
-      <div class="tile">2</div>
-    </div>
-  </main>
+  <div id="game-board"></div>
 </body>
 
 </html>
